style for books page

--- a/pages/books.html
+++ b/pages/books.html
@@ -73,10 +73,11 @@
 
                     <p class="section2-text section2-text-info">
                         После завершения оплаты на вашу электронную почту, указанную при оформлении
-                        заказа, будет отправлена ссылка для скачивание, самого задачника и файла.
-                        Убедитесь, что указали корректный адрес электронной почты при оформлении
-                        заказа. Если письмо не пришло в течение нескольких минут, проверьте папку
-                        "Спам" или обратитесь <a href="./../docs/contact.html">к нам</a> за помощью
+                        заказа, будет отправлена ссылка для скачивания задачника. Убедитесь, что
+                        указали корректный адрес электронной почты при оформлении заказа. Если
+                        письмо не пришло в течение нескольких минут, обновите страницу, проверьте
+                        папку "Спам" или обратитесь <a href="./../docs/contact.html">к нам</a> за
+                        помощью
                     </p>
                     <!-- 
                     <div class="discount-block">
