add sale on books

--- a/pages/books.html
+++ b/pages/books.html
@@ -92,7 +92,15 @@
                             <label for="email">Ваш Email:</label>
                             <input type="email" id="email" required />
                         </div>
-                        <button type="submit" class="buy-button">Купить за 749₽</button>
+                        <div class="price-container">
+                            <div class="price-info">
+                                <button type="submit" class="buy-button">
+                                    <span>Купить за 749₽</span>
+                                    <span class="old-price-inline">1270₽</span>
+                                </button>
+                            </div>
+                            <div class="timer" id="discount-timer" data-start="07:12:03"></div>
+                        </div>
                     </form>
 
                     <p class="section2-text section2-text-info">
